tests/neg/i9327.scala
// fuzzball, gave SO in associatedFile
package object Foo // error
type Foo // error
class Foo(a: Foo)